<resources>
    <string name="app_name">Talk2Tail</string>
    <string name="diary_menu_title">Diary</string>
    <string name="helpful_menu_title">Helpful</string>
    <string name="tracker_menu_title">Tracker</string>
    <string name="this_is_dog_dashboard">This is Dog Dashboard</string>
    <string name="this_is_dog_vaccination">This is Dog Vaccination</string>
    <string name="this_is_owner_dashboard">This is Owner Dashboard</string>
    <string name="login_caption">Authorization</string>
    <string name="login_hint">Input your e-mail</string>
    <string name="pwd_hint">Password</string>
    <string name="login_ok_btn">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="remind">Remind</string>
    <string name="first_time_here">First time here?</string>
    <string name="check_in">Check in</string>
    <string name="log_in_using_social_networks">Log in using social networks</string>
    <string name="reg_name">Name</string>
    <string name="reg_family">Family</string>
    <string name="reg_e_mail">e-mail</string>
    <string name="reg_confirm_password">Confirm password</string>
    <string name="reg_to_register">To register</string>
    <string name="are_you_registered">Are you registered?</string>
    <string name="login">Login</string>
    <string name="check_in_caption">Check in</string>
    <string name="contacts_menu_title">Contacts</string>
    <string name="oops_text">Oops!\nYou don\'t have\na dog…</string>
    <string name="change_it">Change it</string>
    <string name="fab_menu_caption">Add:</string>
    <string name="fab_menu_add_dog">Dog</string>
    <string name="fab_menu_add_audio">Audio</string>
    <string name="fab_menu_add_event">Event</string>
    <string name="fab_menu_add_task">Task</string>
    <string name="month">Month</string>
    <string name="calendar">Calendar</string>
    <string name="about_dog">About dog</string>
    <string name="veterinary_passport">Veterinary passport</string>
    <string name="assignment">Assignment</string>
    <string name="weight">Weight</string>
    <string name="weigh">Weigh</string>
    <string name="killogramm">kg</string>
    <string name="last_wegh">Last weigh</string>
    <string name="days_ago">days ago</string>
    <string name="did_not_weigh_record">You did not record the weight of the dog</string>
    <string name="add_photo">Add photo</string>
    <string name="dog_s_name">Dog\'s name</string>
    <string name="dog_s_full_name">Dog\'s full name</string>
    <string name="equals_names">matches home name</string>
    <string name="female_dog">female</string>
    <string name="male_dog">male</string>
    <string name="is_sterilized">is sterilized</string>
    <string name="dog_birthday">Birthday</string>
    <string name="dog_name_description">Одно из самых важных и обязательных полей, конечно</string>
    <string name="dog_fullname_description">Если сюда вписать нечего, отметьте галочку ниже</string>
    <string name="one_more_required_field">Еще одно обязательное поле</string>
    <string name="pedigree_num">Номер родословной</string>
    <string name="create">Create</string>

</resources>
