<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dogdashboard.ui.DogDashboardFragment">

    <TextView
        android:id="@+id/reg_caption_tv"
        style="@style/AppTheme.TextCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        android:id="@+id/reg_question_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_caption_tv">

        <TextView
            android:id="@+id/reg_question_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_registered" />

        <TextView
            android:id="@+id/reg_login_tv"
            style="@style/AppTheme.TextViewClickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_name_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_with"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_end_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_question_ll">

        <EditText
            android:id="@+id/reg_name_te"
            style="@style/AppTheme.EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reg_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_family_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_with"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_end_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_name_til">

        <EditText
            android:id="@+id/reg_family_te"
            style="@style/AppTheme.EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reg_family" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_with"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_end_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_family_til">

        <EditText
            android:id="@+id/reg_email_te"
            style="@style/AppTheme.EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reg_e_mail" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_pwd_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_with"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_end_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email_til">

        <EditText
            android:id="@+id/reg_pwd_te"
            style="@style/AppTheme.EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pwd_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_pwdconfirm_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_with"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_end_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_pwd_til">

        <EditText
            android:id="@+id/reg_pwdconfirm_te"
            style="@style/AppTheme.EditTextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reg_confirm_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reg_ok_btn"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reg_to_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_pwdconfirm_til" />

</androidx.constraintlayout.widget.ConstraintLayout>