<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    tools:context=".dogdashboard.ui.DogAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/add_dog_equals_names_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/equals_names"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@id/add_dog_full_name_til" />

        <CheckBox
            android:id="@+id/add_dog_is_sterilized_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/is_sterilized"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@id/add_dog_sex_rg" />

        <ImageView
            android:id="@+id/add_dog_photo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_t2t_empty_photo"
            app:layout_constraintEnd_toEndOf="@id/end_gl"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/add_dog_add_photo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:src="@drawable/ic_t2t_camera"
            app:layout_constraintEnd_toStartOf="@id/end_gl"
            app:layout_constraintTop_toBottomOf="@id/add_dog_photo_iv" />

        <RadioGroup
            android:id="@+id/add_dog_sex_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@id/add_dog_equals_names_cb">

            <RadioButton
                android:id="@+id/add_dog_sex_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/female_dog" />

            <RadioButton
                android:id="@+id/add_dog_sex_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/male_dog" />

        </RadioGroup>

        <Spinner
            android:id="@+id/add_dog_breeds_s"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/end_gl"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@id/add_dog_birthday_til" />

        <Spinner
            android:id="@+id/add_dog_colors_s"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/end_gl"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@id/add_dog_breeds_s" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_photo"
            app:layout_constraintEnd_toStartOf="@id/add_dog_add_photo_iv"
            app:layout_constraintTop_toBottomOf="@id/add_dog_photo_iv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_name_description"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@id/add_dog_name_til" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_fullname_description"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@id/add_dog_full_name_til" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_birthday"
            app:layout_constraintBottom_toTopOf="@id/add_dog_birthday_til"
            app:layout_constraintStart_toStartOf="@id/start_gl" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_more_required_field"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@id/add_dog_birthday_til" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="14dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_dog_name_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="@id/end_gl"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_photo_iv">

            <EditText
                android:id="@+id/add_dog_name_te"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/dog_s_name"
                android:inputType="text"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_dog_full_name_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="@id/end_gl"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_name_til">

            <EditText
                android:id="@+id/add_dog_full_name_te"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/dog_s_full_name"
                android:inputType="text"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_dog_birthday_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="@id/end_gl"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_is_sterilized_cb">

            <EditText
                android:id="@+id/add_dog_birthday_te"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/dog_birthday"
                android:inputType="text"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_dog_pedigree_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="@id/end_gl"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_colors_s">

            <EditText
                android:id="@+id/add_dog_pedigree_te"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pedigree_num"
                android:inputType="text"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_dog_stigma_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="@id/end_gl"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_pedigree_til">

            <EditText
                android:id="@+id/add_dog_stigma_te"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pedigree_num"
                android:inputType="text"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_dog_chip_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="@id/end_gl"
            app:layout_constraintStart_toStartOf="@id/start_gl"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_stigma_til">

            <EditText
                android:id="@+id/add_dog_chip_te"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pedigree_num"
                android:inputType="text"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>